<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_cardapio"
        style="@style/AppBaseTheme"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/button_cardapio" />

    <Button
        android:id="@+id/button_avaliacoes"
        style="@style/AppBaseTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/button_avaliacoes" />

    <Button
        android:id="@+id/button_estatistica"
        style="@style/AppBaseTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/button_estatisticas" />

    <Button
        android:id="@+id/button_comentarios"
        style="@style/AppBaseTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/button_comentarios" />

</LinearLayout>